--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/nil0412/placementCell/issues"
   },
-  "homepage": "https://github.com/nil0412/placementCell#readme"
+  "homepage": "https://github.com/nil0412/placementCell#readme",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.1",
+    "csv-writer": "^1.6.0",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.4.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
+  }
 }
